2006-05-02  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_tally/pam_tally.c: Always close file handle
	in error case, don't close it depending on *TALLY value [#1478180]

2006-04-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/fr.po: Updated.

2006-04-11  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/km.po: Updated.

2006-03-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/LINGUAS: Add uk.

	* po/uk.po: New.
	* po/cs.po: Updated.
	* po/po/es.po: Updated.
	* po/fi.po: Updated.
	* po/fr.po: Updated.
	* po/hu.po: Updated.
	* po/it.po: Updated.
	* po/ja.po: Updated.
	* po/nb.po: Updated.
	* po/pl.po: Updated.
	* po/pt.po: Updated.
	* po/pt_BR.po: Updated.
	* po/zh_CN.po: Updated.
	* po/zh_TW.po: Updated.

2006-03-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Remove ALL_LINGUAS.
	* po/LINGUAS: New.
	* po/tr.po: New (from Ismail Donmez <ismail@pardus.org.tr>).

2006-03-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_error.3.xml: New.
	* doc/man/pam_error.3: New, generated from XML file.
	* doc/man/pam_verror.3: New, generated from XML file.
	* doc/man/Makefile.am: Add pam_error.3 and pam_verror.3.

	* modules/pam_lastlog/Makefile.am: Fix typo.

	* modules/pam_lastlog/pam_lastlog.c: Move comment for
	translators in right line.
	* po/*.po: Update po files with comment for translator.

2006-03-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/Makefile.am: Add new manual pages.

	* doc/man/pam.conf.5.xml: Replace link with content
	of PAM admin guide.
	* doc/man/pam.conf.5: Regenerated from XML file.

	* doc/man/pam_info.3.xml: New.
	* doc/man/pam_info.3: New, generated from XML file.
	* doc/man/pam_vinfo.3: New, generated from XML file.

	* doc/man/pam_conv.3.xml: New.
	* doc/man/pam_conv.3: New, generated from XML file.

	* doc/man/pam_putenv.3.xml: New.
	* doc/man/pam_putenv.3: New, generated from XML file.

	* doc/man/pam_getenv.3.xml: New.
	* doc/man/pam_getenv.3: New, generated from XML file.

	* doc/man/pam_getenvlist.3.xml: New.